analyzer/tests/snapshots/analysis__case_060_return_identity_u32.snap
---
source: analyzer/tests/analysis.rs
expression: "build_snapshot(fixture, src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U32,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U32,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/return_identity_u32.fe:3:16
  │
3 │         return x
  │                ^ attributes hash: 5442387896079309831
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U32,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_identity_u32.fe:3:16
  │
3 │         return x
  │                ^ attributes hash: 5442387896079309831
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U32,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_identity_u32.fe:2:5
  │  
2 │ ╭     pub def bar(x: u32) -> u32:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 12689863536826950228
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U32,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U32,
            ),
        ),
    }

note: 
  ┌─ features/return_identity_u32.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u32) -> u32:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 11736337605513566318
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U32,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U32,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_identity_u32.fe:2:20
  │
2 │     pub def bar(x: u32) -> u32:
  │                    ^^^ attributes hash: 11356073382633174465
  │
  = Base(
        Numeric(
            U32,
        ),
    )

note: 
  ┌─ features/return_identity_u32.fe:2:28
  │
2 │     pub def bar(x: u32) -> u32:
  │                            ^^^ attributes hash: 11356073382633174465
  │
  = Base(
        Numeric(
            U32,
        ),
    )


