analyzer/tests/snapshots/analysis__case_061_return_identity_u64.snap
---
source: analyzer/tests/analysis.rs
expression: "build_snapshot(fixture, src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U64,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U64,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/return_identity_u64.fe:3:16
  │
3 │         return x
  │                ^ attributes hash: 3044889006329355385
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U64,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_identity_u64.fe:3:16
  │
3 │         return x
  │                ^ attributes hash: 3044889006329355385
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U64,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_identity_u64.fe:2:5
  │  
2 │ ╭     pub def bar(x: u64) -> u64:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 986214199269101453
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U64,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U64,
            ),
        ),
    }

note: 
  ┌─ features/return_identity_u64.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u64) -> u64:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 354119343498118438
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U64,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U64,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_identity_u64.fe:2:20
  │
2 │     pub def bar(x: u64) -> u64:
  │                    ^^^ attributes hash: 17534999559619587862
  │
  = Base(
        Numeric(
            U64,
        ),
    )

note: 
  ┌─ features/return_identity_u64.fe:2:28
  │
2 │     pub def bar(x: u64) -> u64:
  │                            ^^^ attributes hash: 17534999559619587862
  │
  = Base(
        Numeric(
            U64,
        ),
    )


